--- a/lillja-farm-app/package.json
+++ b/lillja-farm-app/package.json
@@ -12,9 +12,12 @@
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "i18next": "^25.1.3",
     "next": "13.4.1",
+    "next-i18next": "^15.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
@@ -22,6 +25,8 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/eslint-parser": "^7.27.1",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
